Resume in the AM with the modal, add back in scroll triggered animations to skill cards which should hopefully fix overflow issue, add animation back to hero svg, add a slider in place of a single image on mobile devices if video still won't work, add drop-shadow animation to hero image on hover similar to the profile image animation in the video to each square, make sure the contact route and sms route work, set up the env appropriately to make Next happy, and add poetry blog with video to the portfolio section

--- a/css/App.css
+++ b/css/App.css
@@ -440,7 +440,7 @@ section {
 
 .skills-container ul li {
 	background-color: #fff;
-	padding: 2rem;
+	padding: 2rem 2rem 0rem 2rem;
 	border-radius: 1rem;
 	margin-bottom: 1rem;
 	height: 100%;
@@ -526,8 +526,9 @@ section {
 }
 
 /* .portfolio-container a {
-    display: contents;
-  } */
+	display: contents;
+} */
+
 .portfolio-container {
 	padding-bottom: 40px;
 }
@@ -625,7 +626,7 @@ section {
 		grid-gap: 1rem;
 	}
 	.portfolio {
-		padding-top: 7rem;
+		padding-top: 8rem;
 	}
 	.portfolio-container a img {
 		border-radius: 1rem;
